# tensorflow

./: CMakeLists.txt
CMake/: VisualStudio.cmake
tensorflow/: CMakeLists.txt
tensorflow/c/: CMakeLists.txt
tensorflow/core/: CMakeLists.txt
tensorflow/stream_executor/: CMakeLists.txt
